# AnimatedWorldFramework

./: CMakeLists.txt  CMakeSettings.json
cmake/: sourcelist.cmake
src/: hooks.cpp  main.cpp
src/detourxs/: detourxs.h
